<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeView">


    <Button
        android:id="@+id/userList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/add_user" />

    <Button
        android:id="@+id/userListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userList"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view_user_list" />

    <Button
        android:id="@+id/expenseList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userListView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_expense" />

    <Button
        android:id="@+id/expenseListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expenseList"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view_expense_list" />
</RelativeLayout>